--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-<app-navbar></app-navbar>
+<div>
+  <app-navbar></app-navbar>
+  <app-header></app-header>
+  <app-footer></app-footer>
+
+</div>
+
+
 <router-outlet></router-outlet>
