--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -7,6 +7,7 @@
     font-size: 1.2rem;
     color: var(--orange);
     align-items: center;
+    height:10vh;
 }
 .items{
 
@@ -19,6 +20,15 @@
 
 .item{
     padding: 1rem 6%; 
+    cursor: pointer;
+}
+
+.item:hover{
+    color: var(--white);
+}
+
+h1:hover{
+    color: var(--white);
     cursor: pointer;
 }
 
