--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -20,8 +20,6 @@ footer{
     width:50%;
 }
 
-
-
 .isValid.ng-pristine.ng-touched, .isValid.ng-touched.ng-invalid{
     border: solid 0.3rem red;
 }
@@ -30,3 +28,16 @@ footer{
     color: red;
     font-size: 2rem;
 }
+
+.sendButton{
+
+    width: 40%;
+    height: 5vh;
+    cursor: pointer;
+    background-color: var(--blue);
+
+    margin-bottom: 3rem;
+
+}
+
+
